# spatialaw

./: .gitignore  BASELINE_SETUP.md  COLLECT_REAL_DATA.md  DATASET_INTEGRATION.md  DATA_COLLECTION_GUIDE.md  DATA_COLLECTION_PLAN.md  DATA_COLLECTION_TIPS.md  HOW_TO_GET_REAL_DATA.md  KMEANS_CLUSTERING.md  Makefile  NEXT_STEPS.md  PRESENTATION_SLIDES.md  PROJECT_EXPLANATION.md  PROJECT_FLOW_DIAGRAM.md  QUICK_COMMANDS.md  QUICK_START.md  README.md  REAL_DATA_ONLY.md  SETUP.md  TRAINING_SUMMARY.md  VivaPrep.txt  WHY_UNIFIED_MODEL.md  WIFI_COLLECTION.md  app.py  cleanup_old_files.sh  collect.py  collect_with_position.py  debug_features.py  download_test_data.sh  fix_notebook.py  generate_synthetic_files.py  pyproject.toml  quick_start_baseline.sh  requirements.txt  setup.sh  start_collection.sh  syslog_list.py  test_model.sh
.streamlit/: secrets.example.toml  secrets.toml
agent/: alert_client.py
checkpoints/: baseline_linear_metrics.json  baseline_random_forest_metrics.json
config/: __init__.py  settings.py
configs/: baseline_config.yaml
data/: clustered_wifi_data.json  combined_multi_device.json  combined_multi_device_stats.json  csi_from_wifi.npy  synthetic_wifi_data.json  test_data.json  test_real_wifi.json  wifi_data_20251109_144633.json  wifi_data_20251109_144750.json  wifi_data_20251109_145044.json  wifi_data_20251109_145204.json  wifi_data_20251109_150557.json  wifi_data_20251109_161529.json  wifi_data_20251109_161754.json
docs/: CLEANUP_GUIDE.md  RECOMMENDATIONS.md  RESTRUCTURE_SUMMARY.md  VivaPrep.txt  original_README.md  presentation.md  (+2 more)
(+122 files in other folders)
